# api/rpc_update_user.go
@@ -1,85 +1,85 @@
 package api
 
-import (
-	"context"
-	"database/sql"
-	"errors"
-	"time"
+// import (
+// 	"context"
+// 	"database/sql"
+// 	"errors"
+// 	"time"
 
-	"github.com/aradwann/eenergy/pb"
-	db "github.com/aradwann/eenergy/repository/store"
-	"github.com/aradwann/eenergy/util"
-	"github.com/aradwann/eenergy/val"
-	"google.golang.org/genproto/googleapis/rpc/errdetails"
-	"google.golang.org/grpc/codes"
-	"google.golang.org/grpc/status"
-)
+// 	"github.com/aradwann/eenergy/pb"
+// 	db "github.com/aradwann/eenergy/repository/store"
+// 	"github.com/aradwann/eenergy/util"
+// 	"github.com/aradwann/eenergy/val"
+// 	"google.golang.org/genproto/googleapis/rpc/errdetails"
+// 	"google.golang.org/grpc/codes"
+// 	"google.golang.org/grpc/status"
+// )
 
-func (server *Server) UpdateUser(ctx context.Context, req *pb.UpdateUserRequest) (*pb.UpdateUserResponse, error) {
-	authPayload, err := server.authorizeUser(ctx, []string{util.AdminRole, util.UserRole})
-	if err != nil {
-		return nil, unauthenticatedError(err)
-	}
+// func (server *Server) UpdateUser(ctx context.Context, req *pb.UpdateUserRequest) (*pb.UpdateUserResponse, error) {
+// 	authPayload, err := server.authorizeUser(ctx, []string{util.AdminRole, util.UserRole})
+// 	if err != nil {
+// 		return nil, unauthenticatedError(err)
+// 	}
 
-	if authPayload.Role == util.UserRole && authPayload.Username != req.GetUsername() {
-		return nil, status.Error(codes.PermissionDenied, "cannot update other user's info")
-	}
+// 	if authPayload.Role == util.UserRole && authPayload.Username != req.GetUsername() {
+// 		return nil, status.Error(codes.PermissionDenied, "cannot update other user's info")
+// 	}
 
-	violations := validateUpdateUserRequest(req)
-	if violations != nil {
-		return nil, invalidArgumentError(violations)
-	}
+// 	violations := validateUpdateUserRequest(req)
+// 	if violations != nil {
+// 		return nil, invalidArgumentError(violations)
+// 	}
 
-	arg := db.UpdateUserParams{
-		Username: req.GetUsername(),
-		FullName: sql.NullString{String: req.GetFullName(), Valid: req.FullName != nil},
-		Email:    sql.NullString{String: req.GetEmail(), Valid: req.Email != nil},
-	}
+// 	arg := db.UpdateUserParams{
+// 		Username: req.GetUsername(),
+// 		FullName: sql.NullString{String: req.GetFullName(), Valid: req.FullName != nil},
+// 		Email:    sql.NullString{String: req.GetEmail(), Valid: req.Email != nil},
+// 	}
 
-	if req.Password != nil {
-		hashedPassword, err := util.HashPassword(req.GetPassword())
-		if err != nil {
-			return nil, status.Errorf(codes.Internal, "failed to hash password: %s", err)
-		}
-		arg.HashedPassword = sql.NullString{
-			String: hashedPassword,
-			Valid:  true,
-		}
-		arg.PasswordChangedAt = sql.NullTime{Time: time.Now(), Valid: true}
-	}
+// 	if req.Password != nil {
+// 		hashedPassword, err := util.HashPassword(req.GetPassword())
+// 		if err != nil {
+// 			return nil, status.Errorf(codes.Internal, "failed to hash password: %s", err)
+// 		}
+// 		arg.HashedPassword = sql.NullString{
+// 			String: hashedPassword,
+// 			Valid:  true,
+// 		}
+// 		arg.PasswordChangedAt = sql.NullTime{Time: time.Now(), Valid: true}
+// 	}
 
-	user, err := server.store.UpdateUser(ctx, arg)
-	if err != nil {
-		if errors.Is(err, db.ErrRecordNotFound) {
-			return nil, status.Errorf(codes.NotFound, "user not found")
-		}
-		return nil, status.Errorf(codes.Internal, "failed to Update user: %s", err)
-	}
+// 	user, err := server.store.UpdateUser(ctx, arg)
+// 	if err != nil {
+// 		if errors.Is(err, db.ErrRecordNotFound) {
+// 			return nil, status.Errorf(codes.NotFound, "user not found")
+// 		}
+// 		return nil, status.Errorf(codes.Internal, "failed to Update user: %s", err)
+// 	}
 
-	rsp := &pb.UpdateUserResponse{
-		User: convertUser(user),
-	}
-	return rsp, nil
-}
+// 	rsp := &pb.UpdateUserResponse{
+// 		User: convertUser(user),
+// 	}
+// 	return rsp, nil
+// }
 
-func validateUpdateUserRequest(req *pb.UpdateUserRequest) (violations []*errdetails.BadRequest_FieldViolation) {
-	if err := val.ValidateUsername(req.GetUsername()); err != nil {
-		violations = append(violations, fieldViolation("username", err))
-	}
-	if req.Password != nil {
-		if err := val.ValidatePassword(req.GetPassword()); err != nil {
-			violations = append(violations, fieldViolation("password", err))
-		}
-	}
-	if req.FullName != nil {
-		if err := val.ValidateFullName(req.GetFullName()); err != nil {
-			violations = append(violations, fieldViolation("full_name", err))
-		}
-	}
-	if req.Email != nil {
-		if err := val.ValidateEmail(req.GetEmail()); err != nil {
-			violations = append(violations, fieldViolation("email", err))
-		}
-	}
-	return
-}
+// func validateUpdateUserRequest(req *pb.UpdateUserRequest) (violations []*errdetails.BadRequest_FieldViolation) {
+// 	if err := val.ValidateUsername(req.GetUsername()); err != nil {
+// 		violations = append(violations, fieldViolation("username", err))
+// 	}
+// 	if req.Password != nil {
+// 		if err := val.ValidatePassword(req.GetPassword()); err != nil {
+// 			violations = append(violations, fieldViolation("password", err))
+// 		}
+// 	}
+// 	if req.FullName != nil {
+// 		if err := val.ValidateFullName(req.GetFullName()); err != nil {
+// 			violations = append(violations, fieldViolation("full_name", err))
+// 		}
+// 	}
+// 	if req.Email != nil {
+// 		if err := val.ValidateEmail(req.GetEmail()); err != nil {
+// 			violations = append(violations, fieldViolation("email", err))
+// 		}
+// 	}
+// 	return
+// }
